--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,5 @@
 development:
-  hostname: tutorial_network
+  hostname: tutorial_postgres
   adapter: postgresql
   encoding: unicode
   database: tutorial
